# StreaMAX_fit

./: .gitignore  Au26_stream_4664.csv  STRRINGS.csv  STRRINGS.numbers  STRRINGS.xlsx  fit.py  llikelihood.py  main.py  main_data.py  main_mock.py  main_mock_unif.py  population.py  population_disk.py  prior.py  pyproject.toml  run_colab.ipynb  utils.py  ~$STRRINGS.xlsx
