[project]
name = "streamax-fit"
version = "0.1.0"
description = "Triaxial halo fitting pipeline using StreaMAX"
requires-python = ">=3.12"
dependencies = [
    "streamax",
    "jax",
    "jaxlib",
    "numpy",
    "dynesty",
    "corner",
    "matplotlib",
    "astropy",
    "pandas",
    "openpyxl",
    "tqdm",
    "scipy",
    "pickle5; python_version<'3.8'",
    "ipykernel",
    "blackjax",
]

[tool.uv.sources]
blackjax = { git = "https://github.com/handley-lab/blackjax.git", rev = "nested_sampling" }
